--- a/angular_formularios-curso1/gatitobook/src/app/home/home.component.html
+++ b/angular_formularios-curso1/gatitobook/src/app/home/home.component.html
@@ -3,9 +3,8 @@
 		<div class="col-md-6 mb-2">
 			<img
 			 class="img-fluid d-none d-sm-block"
-			 src=""
-			 alt="Gatinho Preto"
-			 />
+			 src="/assets/img/home.jpg"
+			 alt="Gatinho Preto">
 		</div>
 		<div class="col-md-6 ">
 			<router-outlet></router-outlet>
