--- a/angular_formularios-curso1/gatitobook/src/app/home/novo-usuario/novo-usuario.component.html
+++ b/angular_formularios-curso1/gatitobook/src/app/home/novo-usuario/novo-usuario.component.html
@@ -17,13 +17,16 @@
 	</div>
 	<div class="form-group">
 		<input placeholder="Usuário" class="form-control" formControlName="userName" />
-		<app-mensagem *ngIf="novoUsuarioForm.get('userName')?.errors?.['minusculo'] && novoUsuarioForm.get('userName')?.touched"
+		<app-mensagem
+			*ngIf="novoUsuarioForm.get('userName')?.errors?.['minusculo'] && novoUsuarioForm.get('userName')?.touched"
 			mensagem="Usuário deve ser minúsculo"></app-mensagem>
+		<app-mensagem *ngIf="novoUsuarioForm.get('userName')?.errors?.['usuarioExistente']" mensagem="Usuário já existe">
+		</app-mensagem>
 	</div>
 	<div class="form-group">
 		<input type="password" placeholder="Senha" class="form-control" formControlName="password" />
-		<app-mensagem *ngIf="novoUsuarioForm.get('password')?.errors && novoUsuarioForm.get('password')?.touched"
-			mensagem="Senha Obrigatória"></app-mensagem>
+		<app-mensagem *ngIf="novoUsuarioForm.errors?.['senhaIgualUsuario']" mensagem="Senha deve ser diferente do usuário">
+		</app-mensagem>
 	</div>
 	<button class="btn btn-primary btn-block" [disabled]="novoUsuarioForm.invalid">Cadastro</button>
 </form>
