--- a/angular_formularios-curso1/gatitobook/src/app/home/login/login.component.html
+++ b/angular_formularios-curso1/gatitobook/src/app/home/login/login.component.html
@@ -4,15 +4,18 @@
 	<div class="form-group">
 		<input class="form-control" placeholder="Nome do usuário" [(ngModel)]="usuario" name="usuario"
 			#campoUsuario="ngModel" required />
-		<app-mensagem *ngIf="campoUsuario.invalid && campoUsuario.touched" mensagem="Usuário Obrigatório"></app-mensagem>
+		<app-mensagem *ngIf="campoUsuario.invalid && campoUsuario.touched" mensagem="Usuário obrigatório"></app-mensagem>
 	</div>
 
 	<div class="form-group">
 		<input type="password" class="form-control" placeholder="Senha" [(ngModel)]="senha" name="senha"
 			#campoSenha="ngModel" required />
-		<app-mensagem *ngIf="campoSenha.invalid && campoSenha.touched" mensagem="Senha Obrigatória"></app-mensagem>
+		<app-mensagem *ngIf="campoSenha.invalid && campoSenha.touched" mensagem="Senha obrigatória"></app-mensagem>
 	</div>
 
-	<button type="submit" class="btn btn-primary btn-block" [disabled]="loginForm.invalid">Login</button>
+	<button type="submit" class="btn btn-primary btn-block" [disabled]="loginForm.invalid">
+		Login
+	</button>
 </form>
-<p>Não é um usuário?<a [routerLink]="[ '/novousuario']">Se Cadastre!</a></p>
+
+<p>Não é um usuário?<a [routerLink]="['novousuario']">Se cadastre!</a></p>
